# limbic-llm

./: README.md
limbic-llm/: README.md  pyproject.toml  requirements.txt  setup.py
limbic-llm/api/: app.py
limbic-llm/api/routes/: health.py  inference.py
limbic-llm/experiments/: config_1.yaml
limbic-llm/notebooks/: eval_visuals.ipynb  exploration.ipynb  fine_tune_logs.ipynb
limbic-llm/scripts/: deploy_model.sh  run_eval.sh  run_train.sh
limbic-llm/src/: config.py  evaluate.py  inference.py  train.py
limbic-llm/src/affect/: emotion_detector.py  emotion_embedding.py
limbic-llm/src/controller/: motivation_manager.py  policy_router.py
limbic-llm/src/memory/: salience_filter.py  vector_store.py
limbic-llm/src/reward/: reward_model.py  trainer.py
limbic-llm/src/utils/: data_utils.py  model_utils.py
limbic-llm/tests/: test_api.py  test_data.py  test_model.py
