

[tool.poetry]
name = "limbic-llm"
version = "0.1.0"
description = "Limbic Language Model - Fine-tuning, inference, and evaluation framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pandas = "^2.2.0"
pyyaml = "^6.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"